# buu-legal-rag-capstone

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BrandHeader.tsx  ChatBubble.tsx  RetrievalPanel.tsx
frontend/src/hooks/: useChatApi.ts
frontend/src/pages/: ChatPage.tsx  LandingPage.tsx
frontend/src/styles/: chat.css  global.css  landing.css
frontend/src/types/: chat.ts
notebooks/: 01_explore_pdfs.ipynb
notebooks/reports/: eval_report.ipynb
requirements/: base.txt  dev.txt
scripts/: rebuild_kanun_chunks.py  run_retrieval_smoke.py
src/: config.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py  utils.py
src/api/routes/: __init__.py  chat.py  system.py
src/app/: streamlit_app.py
src/preprocessing/: chunker.py  pdf_loader.py  text_cleaner.py
src/rag/: answer_generator.py  pipeline.py  query_rewriter.py  run_demo.py  test_retrieval.py
src/retriever/: article_prefilter.py  build_faiss_index.py  doc_reranker.py  faiss_index.py
tests/: test_api_utils.py  test_app_startup.py
tests/fixtures/: rag_eval_qa_200.json
