[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buu-legal-rag"
version = "0.1.0"
description = "Legal RAG system for Bursa Uludag University regulation search and QA."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BUU Legal RAG Team" }
]

[tool.setuptools.packages.find]
include = ["src*"]
